--- a/ras_elhekma.html
+++ b/ras_elhekma.html
@@ -1,11 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="اكتشف تجربة لافيستا السكنية الفريدة في العاصمة الإدارية الجديدة والعين السخنة والساحل الشمالي — مشاريع متكاملة من لافيستا للتطوير العقاري تجمع بين الرفاهية، الموقع الاستراتيجي، والخدمات المتكاملة.">
-  <title>لافيستا: تجربة سكنية فريدة في قلب العاصمة الإدارية الجديدة</title>
+  <meta name="description" content="مشروع لافيستا راس الحكمة – تحفة ساحلية جديدة من شركة لافيستا للتطوير العقاري في قلب الساحل الشمالي، تجمع بين الفخامة، الموقع الاستراتيجي، والخدمات المتكاملة. اكتشف التفاصيل الكاملة الآن.">
+  <meta name="keywords" content="لافيستا راس الحكمة, مشروع لافيستا راس الحكمة, لافيستا الساحل الشمالي, قرية لافيستا راس الحكمة, شركة لافيستا للتطوير العقاري, علاء الهادي لافيستا, لافيستا باي, لافيستا سيتي, مشاريع لافيستا, استثمار في راس الحكمة">
+  <title>لافيستا راس الحكمة – تحفة ساحلية من لافيستا للتطوير العقاري</title>
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -60,7 +60,7 @@
     .hero {
       position: relative;
       height: 70vh;
-      background: linear-gradient(rgba(1, 30, 96, 0.75), rgba(1, 30, 96, 0.85)), url('https://la-vistaproperties.com/assets/img/projects/city.webp') center/cover no-repeat;
+      background: linear-gradient(rgba(1, 30, 96, 0.75), rgba(1, 30, 96, 0.85)), url('https://la-vistaproperties.com/assets/img/projects/hikma.webp') center/cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -117,10 +117,32 @@
       line-height: 1.8;
     }
 
+    /* Features */
+    .features-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .feature-item {
+      background: white;
+      padding: 20px;
+      border-radius: 16px;
+      text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+      border-top: 3px solid var(--primary);
+    }
+
+    .feature-item h3 {
+      font-size: 1.15rem;
+      color: var(--primary);
+    }
+
     /* Projects Grid */
     .projects-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 30px;
       margin-top: 40px;
     }
@@ -152,23 +174,6 @@
       color: var(--primary);
       margin-bottom: 12px;
       font-size: 1.3rem;
-    }
-
-    /* Features */
-    .features-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
-
-    .feature-item {
-      background: white;
-      padding: 20px;
-      border-radius: 16px;
-      text-align: center;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.06);
-      border-top: 3px solid var(--primary);
     }
 
     /* CTA */
@@ -227,8 +232,8 @@
   <!-- Hero -->
   <div class="hero">
     <div>
-      <h1>لافيستا: تجربة سكنية فريدة</h1>
-      <p>في قلب العاصمة الإدارية الجديدة، العين السخنة، والساحل الشمالي</p>
+      <h1>لافيستا راس الحكمة</h1>
+      <p>تحفة ساحلية جديدة من شركة لافيستا للتطوير العقاري في قلب الساحل الشمالي</p>
     </div>
   </div>
 
@@ -241,112 +246,128 @@
 
     <!-- Intro -->
     <section>
-      <h2 class="section-title">مقدمة</h2>
+      <h2 class="section-title">مقدمة عن المشروع</h2>
       <p class="text-block">
-        تعتبر شركة لافيستا للتطوير العقاري واحدة من الشركات الرائدة في مجال العقارات في مصر، حيث تقدم مجموعة متنوعة من المشاريع السكنية التي تلبي احتياجات جميع العملاء. من بين هذه المشاريع، يبرز كمبوند لافيستا، الذي يُعد وجهة مميزة للراغبين في العيش في بيئة هادئة ومريحة.
+        تواصل شركة لافيستا للتطوير العقاري مسيرتها الناجحة في تقديم أفضل المشاريع السكنية والساحلية في مصر، لتضع بصمتها المميزة هذه المرة في قلب رأس الحكمة من خلال مشروعها الجديد <strong>لافيستا راس الحكمة</strong>. المشروع يجسد مفهوم الفخامة والرفاهية في أبهى صورها، ويكمل سلسلة النجاحات التي حققتها الشركة في مشروعاتها السابقة مثل <strong>لافيستا سيتي العاصمة الإدارية الجديدة</strong> و<strong>لافيستا باي الساحل الشمالي</strong>.
+      </p>
+    </section>
+
+    <!-- About Lavista -->
+    <section style="background: white; border-radius: 24px; padding: 60px;">
+      <h2 class="section-title">نبذة عن شركة لافيستا للتطوير العقاري</h2>
+      <p class="text-block">
+        تُعد شركة لافيستا من الشركات الرائدة في مجال العقارات داخل مصر، وقد استطاعت على مدار سنوات أن تكتسب ثقة العملاء بفضل التزامها بالجودة والدقة في التنفيذ. أسسها مجموعة من أبرز خبراء العقارات وعلى رأسهم <strong>علاء الهادي لافيستا</strong>، الذي كان له دور بارز في وضع رؤية الشركة التي تعتمد على الدمج بين التصميم العصري والموقع المتميز والخدمات الشاملة.
+      </p>
+      <p class="text-block">
+        من بين أهم إنجازات شركة لافيستا للتطوير العقاري سلسلة من المشاريع المتكاملة التي نالت شهرة واسعة مثل كمبوند <strong>لافيستا سيتي العاصمة الإدارية الجديدة</strong>، وقرية <strong>لافيستا باي في الساحل الشمالي</strong>، ومشروع <strong>لافيستا 6 في العين السخنة</strong>، وغيرها من المشاريع التي جعلت اسم لافيستا علامة للجودة والتميز.
       </p>
     </section>
 
     <!-- Location -->
-    <section style="background: white; border-radius: 24px; padding: 60px;">
-      <h2 class="section-title">موقع لافيستا</h2>
+    <section>
+      <h2 class="section-title">موقع مشروع لافيستا راس الحكمة</h2>
       <p class="text-block">
-        يقع كمبوند لافيستا في موقع استراتيجي بالقرب من العديد من الطرق والمحاور الرئيسية، مما يسهل الوصول إلى مختلف مناطق القاهرة. يتميز <strong>لافيستا سيتي</strong> بموقعه في العاصمة الإدارية الجديدة، حيث يبعد أقل من 10 دقائق عن الطريق الدائري، مما يجعله الخيار المثالي للراغبين في العيش بالقرب من المرافق الحيوية.
+        اختارت شركة لافيستا للتطوير العقاري موقعًا استراتيجيًا لمشروع <strong>لافيستا راس الحكمة</strong> في قلب الساحل الشمالي، على الكيلو 179 من طريق الإسكندرية – مرسى مطروح الصحراوي، بالقرب من طريق فوكا الجديد. هذا الموقع يجمع بين الطبيعة الخلابة ومياه البحر الفيروزية والرمال البيضاء الناعمة، ليصبح قرية لافيستا راس الحكمة من أرقى الوجهات السياحية والاستثمارية في مصر.
+      </p>
+      <p class="text-block">
+        ويُعد المشروع امتدادًا طبيعيًا لنجاح <strong>لافيستا باي الساحل الشمالي</strong>، الذي أثبت ريادة الشركة في تطوير القرى السياحية الراقية.
       </p>
     </section>
 
-    <!-- Projects -->
+    <!-- Design -->
+    <section style="background: white; border-radius: 24px; padding: 60px;">
+      <h2 class="section-title">تصميم كمبوند لافيستا راس الحكمة</h2>
+      <p class="text-block">
+        اعتمدت شركة لافيستا في تصميم كمبوند لافيستا راس الحكمة على مفهوم الدمج بين الفخامة والطبيعة. فجميع الوحدات السكنية تتمتع بإطلالات بانورامية على البحر، مع توزيع هندسي يضمن الخصوصية والهدوء. وقد تم تصميم المساحات الخضراء والمسطحات المائية بعناية فائقة لتوفر أجواءً مريحة وبيئة مثالية للعائلة.
+      </p>
+      <p class="text-block">
+        كما حرصت الشركة على أن يكون المشروع مكملًا لهوية مشاريعها السابقة مثل <strong>لافيستا سيتي</strong> و<strong>لافيستا باي</strong>، حيث يجمع بين الرقي في التصميم والبنية التحتية القوية والخدمات المتكاملة.
+      </p>
+    </section>
+
+    <!-- Services -->
     <section>
-      <h2 class="section-title">مشاريع شركة لافيستا</h2>
+      <h2 class="section-title">خدمات ومرافق قرية لافيستا راس الحكمة</h2>
+      <div class="features-list">
+        <div class="feature-item">
+          <h3>مساحات خضراء وبحيرات صناعية</h3>
+        </div>
+        <div class="feature-item">
+          <h3>ممشى ساحلي بطول 1200م</h3>
+        </div>
+        <div class="feature-item">
+          <h3>مناطق ألعاب مائية للأطفال</h3>
+        </div>
+        <div class="feature-item">
+          <h3>نادي اجتماعي ورياضي متكامل</h3>
+        </div>
+        <div class="feature-item">
+          <h3>أمن وحراسة 24/7</h3>
+        </div>
+        <div class="feature-item">
+          <h3>نظام ذكي لإدارة المرافق</h3>
+        </div>
+      </div>
+    </section>
+
+    <!-- Investment -->
+    <section style="background: white; border-radius: 24px; padding: 60px;">
+      <h2 class="section-title">مميزات الاستثمار في لافيستا راس الحكمة</h2>
+      <p class="text-block">
+        يُعتبر مشروع لافيستا راس الحكمة فرصة استثمارية واعدة، نظرًا لموقعه المميز على البحر مباشرة، بالإضافة إلى سمعة شركة لافيستا في الالتزام بالمواعيد وجودة البناء. كما أن أسعار الوحدات تناسب مختلف الفئات مع نظام سداد ميسر، مما يجعل قرية لافيستا من الخيارات الأولى للمستثمرين الباحثين عن عائد مميز.
+      </p>
+    </section>
+
+    <!-- Previous Projects -->
+    <section>
+      <h2 class="section-title">مشاريع لافيستا السابقة والناجحة</h2>
       <div class="projects-grid">
         <div class="project-card">
           <img src="https://la-vistaproperties.com/assets/img/projects/city.webp" alt="لافيستا سيتي" class="project-img">
           <div class="project-content">
             <h3>لافيستا سيتي</h3>
-            <p>أبرز مشاريع الشركة في العاصمة الإدارية الجديدة، يضم وحدات سكنية متنوعة تناسب جميع الاحتياجات.</p>
+            <p>أحد أهم المشاريع داخل العاصمة الإدارية الجديدة، نقلة نوعية في التصميم العمراني الحديث.</p>
           </div>
         </div>
         <div class="project-card">
-          <img src="https://la-vistaproperties.com/assets/img/projects/gardens.webp" alt="لافيستا راس الحكمة" class="project-img">
+          <img src="https://la-vistaproperties.com/assets/img/projects/eastbay.webp" alt="لافيستا باي إيست" class="project-img">
           <div class="project-content">
-            <h3>لافيستا راس الحكمة</h3>
-            <p>مشروع ساحلي على البحر المتوسط، وجهة مثالية لقضاء العطلات والاستثمار.</p>
-          </div>
-        </div>
-        <div class="project-card">
-          <img src="https://la-vistaproperties.com/assets/img/projects/city.webp" alt="لافيستا باي إيست" class="project-img">
-          <div class="project-content">
-            <h3>لافيستا باي إيست</h3>
-            <p>قرية سياحية على الساحل الشمالي، توفر خدمات ومرافق ترفيهية متكاملة.</p>
+            <h3>لافيستا باي الساحل الشمالي</h3>
+            <p>مشروع ساحلي فاخر يتميز بالموقع والخدمات الفندقية.</p>
           </div>
         </div>
         <div class="project-card">
           <img src="https://la-vistaproperties.com/assets/img/projects/gardens.webp" alt="لافيستا جاردنز" class="project-img">
           <div class="project-content">
             <h3>لافيستا جاردنز – العين السخنة</h3>
-            <p>واحدة من أبرز القرى السياحية في العين السخنة، بإطلالات بحرية مباشرة.</p>
+            <p>قرية سياحية بإطلالات بحرية مباشرة وخدمات متكاملة.</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Features -->
-    <section>
-      <h2 class="section-title">مميزات كمبوند لافيستا</h2>
+    <!-- Why Choose -->
+    <section style="background: white; border-radius: 24px; padding: 60px;">
+      <h2 class="section-title">لماذا تختار لافيستا راس الحكمة؟</h2>
       <div class="features-list">
         <div class="feature-item">
-          <h3>تصميم معماري مبتكر</h3>
+          <h3>موقع استراتيجي في قلب الساحل الشمالي</h3>
         </div>
         <div class="feature-item">
-          <h3>مساحات خضراء واسعة</h3>
+          <h3>تصميم عصري يجمع بين الراحة والفخامة</h3>
         </div>
         <div class="feature-item">
-          <h3>خدمات متكاملة</h3>
+          <h3>خدمات متكاملة تناسب العائلات والمستثمرين</h3>
         </div>
         <div class="feature-item">
-          <h3>أمن وحراسة 24/7</h3>
+          <h3>سمعة قوية لشركة لافيستا للتطوير العقاري</h3>
         </div>
-      </div>
-    </section>
-
-    <!-- Lavista 6 -->
-    <section style="background: white; border-radius: 24px; padding: 60px;">
-      <h2 class="section-title">لافيستا 6</h2>
-      <p class="text-block">
-        يُعتبر لافيستا 6 واحدًا من أحدث المشاريع التي أطلقتها الشركة، حيث يقدم وحدات سكنية تتنوع بين الشقق والفيلات. يتميز المشروع بتصميمه الفريد وموقعه الاستراتيجي، مما يجعله مكانًا مثاليًا للعيش.
-      </p>
-    </section>
-
-    <!-- Capital Importance -->
-    <section>
-      <h2 class="section-title">أهمية العاصمة الإدارية الجديدة</h2>
-      <p class="text-block">
-        تعتبر العاصمة الإدارية الجديدة من المشاريع القومية الكبرى في مصر، حيث تهدف إلى تخفيف الضغط عن القاهرة. تقع لافيستا سيتي في قلب العاصمة الإدارية الجديدة، مما يتيح للسكان الوصول إلى المرافق الحكومية والتجارية بسهولة.
-      </p>
-    </section>
-
-    <!-- Living Experience -->
-    <section style="background: white; border-radius: 24px; padding: 60px;">
-      <h2 class="section-title">تجربة المعيشة في لافيستا</h2>
-      <p class="text-block">
-        تقدم شركة لافيستا تجربة معيشة فريدة من نوعها، حيث يضمن الكمبوند بيئة آمنة ومريحة لكافة أفراد العائلة. بالإضافة إلى ذلك، توفر الشركة خيارات سكنية متنوعة تناسب جميع الميزانيات.
-      </p>
-    </section>
-
-    <!-- Services -->
-    <section>
-      <h2 class="section-title">خدمات ومرافق إضافية</h2>
-      <div class="features-list">
-        <div class="feature-item">مراكز تجارية</div>
-        <div class="feature-item">مرافق رياضية</div>
-        <div class="feature-item">أمن وحراسة</div>
-        <div class="feature-item">نادي صحي وسبا</div>
       </div>
     </section>
 
     <!-- CTA -->
     <div class="cta-section">
-      <h2>ابدأ رحلتك نحو حياة فاخرة اليوم</h2>
+      <h2>ابدأ رحلتك نحو حياة فاخرة على شواطئ رأس الحكمة</h2>
       <a href="tel:+201000000000" class="btn">اتصل بنا الآن</a>
     </div>
 
@@ -366,7 +387,7 @@
 
   <footer>
     <p>© 2024 La Vista Developments – جميع الحقوق محفوظة</p>
-    <p>لافيستا: تجربة سكنية فريدة في قلب العاصمة الإدارية الجديدة</p>
+    <p>لافيستا راس الحكمة – تحفة ساحلية من لافيستا للتطوير العقاري</p>
   </footer>
 
 </body>
